app/css/app.scss
@import "normalize";
// @import "bourbon";
// @import "./base";
// @import "neat";
@import "./bootstrap";
@import "./bootstrap-theme";

// body.portrait {
//   -webkit-transform: rotate(90deg);
// }

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Open Sans Light'), local('OpenSans-Light'), url(./fonts/DXI1ORHCpsQm3Vp6mXoaTRampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
  font-family: 'Open Sans Bold';
  font-style: normal;
  font-weight: 600;
  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(./fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/*** Base Elements ***/
body {
  font-family: 'Open Sans Bold' !important;
  // padding-top: 67px;
  color: #5A5D67;
}

h2 {
  font-size: 20px;
  font-weight: 900;
}
/*** Navbar ***/


.navbar-default {
  //nav bar color
  background-image: linear-gradient(to bottom, #fff 0%, #8FBBBB 100%);
}

.navbar-brand {
  position: absolute;
  left: 16px;
  margin: -8px;
}

.navbar-right {
  position: absolute;
  right: 16px;
  top: -5px;
}

.navbar {
  //nav bar to table spacing
  margin-bottom: 15px;
}

.navbar-default .navbar-nav > li > a {
  color: #fff;
}

.navbar-default .navbar-nav > li > a:hover {
  background: transparent;
  color: #5A5D67;
}

.navbar-default .navbar-nav > li > a:focus {
  background: transparent;
  color: #5A5D67;
}

.floorNameInput {
  background-color: transparent !important;
  border: none !important;
  box-shadow: none !important;
  text-align: center;
  white-space: nowrap;
  white-space: nowrap;
  overflow: visible;
  color: white;
}

/*** Table ***/
.form-group {
  min-height: 100;
  margin: -9px 0;
  white-space: nowrap;
}

.table-input {
  background-color: transparent !important;
  border: none !important;
  box-shadow: none !important;
  text-align: center;
  white-space: nowrap;
  white-space: nowrap;
  overflow: visible;
}

.table-head {
  font-family: 'Open Sans Bold';
  text-align: center;
  font-size: 1.2em;
  font-weight: bolder;
  white-space: nowrap;
  white-space: nowrap;
  overflow: hidden;
  padding: 0px;
  margin: 0px;
  /*text-overflow: ellipsis;*/
}

td {
  width: 1px;
  white-space: nowrap;
}

tr {
  width: 1px;
  white-space: nowrap;
}

//boarder select blue color
// input[type=text]:focus, textarea:focus {
//   box-shadow: 0 0 5px rgba(81, 203, 238, 1) !important;
//   padding: 3px 3px 3px 3px !important;
//   margin: 5px 1px 3px 0px !important;
//   border: 1px solid rgba(81, 203, 238, 1) !important;
// }

//darker stripe colors
.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #f3f3f3;
  /*background-color: blue;*/
}

/*** Search Bar ***/
#search-control {
  border-radius: 8px;
  margin: 8px 0;
  width: 200px;
  text-align: left;
}

.form-control + .glyphicon {
  position: absolute;
  right: 0;
  padding: 17px 7px;
}

/*** Footer ***/
.footer {
  height: 19px;
  opacity: 0.8;
  background-color: #8FBBBB;
  color: #fff;
}

.footer-info {
  font-size: 12px;
  text-align: center;
}

@media screen and (max-width: 767px) {
  #search-control {
    position: relative;
    right: 68px;
    top: -58px;
  }

  .form-control + .glyphicon {
    padding: 0px 7px;
    position: relative;
    right: -100px;
    top: -106px;
  }

  .dropdown {
    color: blue;
    position: absolute;
    left: -55px;
    top: -40px;
  }
}

